# water

./: .gitignore  .gitmodules  README.md  README_CN.md
docs/: memory_allocator.mdj  render_system.mdj
include/glad/: glad.h
lib/assimp/: .gitattributes  assimp-vc140-mt.lib  assimp-vc140-mtd.lib
lib/assimp/vc140/: assimp-vc140-mtd.lib
lib/assimp/vc142/: assimp-vc142-mtd.lib
lib/boost/: libboost_filesystem-vc140-mt-x32-1_69.lib  libboost_filesystem-vc140-mt-x64-1_69.lib
lib/boost/vc140/: libboost_filesystem-vc140-mt-x32-1_70.lib  libboost_filesystem-vc140-mt-x64-1_70.lib
lib/boost/vc142/: libboost_filesystem-vc142-mt-x32-1_70.lib  libboost_filesystem-vc142-mt-x64-1_70.lib
lib/glfw3/vc140/: glfw3.lib
lib/glfw3/vc142/: glfw3.lib
lib/irrXML/: IrrXMLd.lib
lib/irrXML/vc140/: IrrXML.lib
lib/irrXML/vc142/: IrrXMLd.lib
lib/zlib/: zlib.exp  zlib.ilk  zlibd.exp  zlibd.ilk
lib/zlib/vc140/: zlib.lib  zlibd.lib  zlibstatic.lib  zlibstaticd.lib
lib/zlib/vc142/: zlibstaticd.lib
res/fonts/: font.mat
res/materials/: skeleton.mat
res/models/: ball.model  box.mat  box.model  box_diffuse.mat  box_outline.mat  simple_light.mat
res/models/billboard/: billboard.mat
res/models/box/: box.mat  box_cube_map.mat  box_cubemap.model  box_diffuse.mat  box_outline.mat
res/models/floor/: floor.mat  floor.model
res/models/gun/: GUN.mtl  gun.mat  gun.model  gun_pbr.mat  gun_pbr.model
res/models/minotaur/: minotaur.mat  minotaur.model
res/models/pbr_ball/: pbr_ball.frag  pbr_ball.geom  pbr_ball.mat  pbr_ball.model  pbr_ball.tech  pbr_ball.vert
res/models/quad/: quad.model
res/models/shadow_map_show/: shadow_show.mat  shadow_show.model
res/models/sky_box/: sky_box.frag  sky_box.mat  sky_box.model  sky_box.tech  sky_box.vert  sky_box_hdr.frag  sky_box_hdr.mat  sky_box_hdr.model  sky_box_hdr.tech  sky_box_hdr.vert
res/models/star_ship/: ship.tbscene  starship.mat  starship.model  starship_diffuse.mat  starship_slow_pbr.mat  starship_slow_pbr.model  星际战斗机.max
res/scenes/: animation.scene  shadow_map.mat  test.scene
res/shaders/: billboard.frag  billboard.geom  billboard.tech  deffered_pbr_cube_slow.frag  font.frag  font.tech  font.vert  gpu_skin.vert  lighting.frag  lighting.tech  lighting.vert  material.xsd  outline.frag  outline.mat  outline.tech  outline.vert  pbr.frag  pbr.tech  pbr.vert  pbr_cube_slow.frag  pbr_cube_slow.tech  pbr_cube_slow.vert  render_state.xsd  shadow_map.tech  shadow_map.vert  simple_color.frag  simple_color.mat  simple_color.tech  simple_color.vert  simple_cube_map.frag  simple_cube_map.tech  simple_cube_map.vert  simple_diffuse.frag  simple_diffuse.mat  simple_diffuse.tech  simple_diffuse.vert  simple_light.frag  simple_light.mat  simple_light.tech  simple_light.vert  (+8 more)
res/templates/: material.xsd  model.xsd  render_state.xsd  scene.xsd  technique.xsd  template.frag  template.geom  template.tech  template.vert
src/: CMakelists.txt  config.h.in
src/client/: CMakeLists.txt  client.cpp
src/cmake/: common.cmake
src/common/: CMakeLists.txt  adt.hpp  common.h  fps.cpp  fps.h  log.cpp  log.h  memory_allocate_policy.h  memory_allocator.h  memory_allocator_config.h  singleton.hpp  timeline.cpp  timeline.h  util.cpp  util.h
src/filesystem/: CMakeLists.txt  file_base.h  filesystem.cpp  filesystem.h  image.cpp  image.h  pugixml.cpp  xml_file.cpp  xml_file.h  xml_loader.h
src/math3d/: CMakelists.txt  math3d.hpp  math3d_common.cpp  math3d_common.h
src/mesh/: CMakeLists.txt  IMeshLoader.h  MeshLoader.cpp  MeshLoader.h  assimpLoader.cpp  assimpLoader.h
src/mesh_loader/: CMakeLists.txt  IMeshLoader.h  MeshLoader.cpp  MeshLoader.h
src/render/: CMakelists.txt  device.cpp  device.h  draw_command.h  glad.c  i_device.h  i_material.h  i_render_object.h  i_render_task.h  i_technique.h  light.cpp  light.h  material.cpp  material.h  material_param.cpp  material_param.h  mesh.cpp  mesh.h  render.h  render_const.h  render_object.h  render_program.h  render_state.cpp  render_state.h  render_state_info.h  render_state_manager.cpp  render_state_manager.h  render_target.h  render_task.cpp  render_task.h  render_thread.cpp  render_thread.h  shader_manager.cpp  shader_manager.h  shader_program.h  technique.cpp  technique.h  technique_common.cpp  technique_common.h  technique_loader_config.h  (+2 more)
src/render/material/: material.cpp  material.h  material_param.cpp  material_param.h  struct_param.cpp  struct_param.h
src/render/opengl/: device_opengl.cpp  device_opengl.h  mesh_opengl.cpp  mesh_opengl.h  opengl_common.h  render_program_opengl.cpp  render_program_opengl.h  render_target_opengl.h  (+9 more)
src/test/: CMakelists.txt
src/test/test_client/: CMakeLists.txt  test_client.cpp
src/test/test_filesystem/: CMakeLists.txt  test_filesystem.cpp
src/test/test_render/: CMakeLists.txt  test_render.cpp
src/text/: CMakeLists.txt  text.cpp  text.h
src/window/: CMakeLists.txt  window_interface.h  window_keys.h  window_win32.cpp  window_win32.h
src/world/: CMakeLists.txt  camera.cpp  camera.h  component.cpp  component.h  game_object.cpp  game_object.h  mesh_component.h  transform_component.cpp  transform_component.h
src/world/animation/: animation.cpp  animation.h  animator.cpp  animator.h  skeleton.cpp  skeleton.h
src/world/components/: animator_component.cpp  animator_component.h  base_component.cpp  base_component.h  camera_control_component.cpp  camera_control_component.h  component.cpp  component.h  component_const.h  material_component.cpp  material_component.h  mesh_component.cpp  mesh_component.h  render_component.cpp  render_component.h  scene_object_component.cpp  scene_object_component.h  shadowmap_component.cpp  shadowmap_component.h  transform_component.cpp  transform_component.h
src/world/gameobjects/: billboardlist.cpp  billboardlist.h  camera.cpp  camera.h  component_object.hpp  game_object.cpp  game_object.h  itickable.h  model.cpp  model.h  scene.cpp  scene.h  skeleton_object.cpp  skeleton_object.h  space_object.cpp  space_object.h  world.cpp  world.h
src/world/loaders/: assimpLoader.cpp  assimpLoader.h
src/world/text/: text.cpp  text.h
(+5 files in other folders)
