project(world)

file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.*)
file(GLOB_RECURSE GAMEObJECT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/gameobjects/*.*)
file(GLOB_RECURSE COMPONENT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/components/*.*)

source_group("gameobjects" FILES ${GAMEObJECT_SRC_FILES})
source_group("components" FILES ${COMPONENT_SRC_FILES})

add_library(world ${SOURCE_FILES} ${GAMEObJECT_SRC_FILES} ${COMPONENT_SRC_FILES})
set_property(TARGET world PROPERTY FOLDER "ENGINE")

