project(world)

file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.*)
file(GLOB_RECURSE GAMEObJECT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/gameobjects/*.*)
file(GLOB_RECURSE COMPONENT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/components/*.*)
file(GLOB_RECURSE TEXT_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/text/*.*)
file(GLOB_RECURSE ANIMATION_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/animation/*.*)
file(GLOB_RECURSE LOADER_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/loaders/*.*)

source_group("gameobjects" FILES ${GAMEObJECT_SRC_FILES})
source_group("components" FILES ${COMPONENT_SRC_FILES})
source_group("text" FILES ${TEXT_SRC_FILES})
source_group("animation" FILES ${ANIMATION_SRC_FILES})
source_group("loaders" FILES ${LOADER_SRC_FILES})

add_library(world ${SOURCE_FILES} ${GAMEObJECT_SRC_FILES} ${COMPONENT_SRC_FILES} ${TEXT_SRC_FILES} ${ANIMATION_SRC_FILES} ${loaders})
set_property(TARGET world PROPERTY FOLDER "ENGINE")

